--- a/src/pages/MyDecks/styles.css
+++ b/src/pages/MyDecks/styles.css
@@ -34,3 +34,113 @@
     margin-top: 5px;
     line-height: 24px;
 }
+
+.btnAddCard{
+  display: inline-block;
+  position: relative;;
+  right: 0px;
+}
+
+/*  Modal */
+
+.modal {
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 60%;
+    height: 60%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+  
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .modal-header {
+    padding: 2px 16px;
+    background-color: #0095ff;
+    color: white;
+  }
+  
+.modal-body {
+    padding: 30px 16px;
+}
+
+  /* New deck form */
+  .modal-body input{
+    position: relative;
+    display: block;
+    width: 100%;
+    padding: 12px 20px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    margin: 8px 0;
+    height: 40px;
+    border-radius: 4px;
+}
+
+
+.modal-body button {
+    display: inline-block;
+    color: white;
+    padding: 14px 20px;
+    border: none;
+    cursor: pointer;
+    width: 25%;
+    font-size: large;
+    border-radius: 8px;
+    margin-top: 10px;
+}   
+
+.cancel-btn {
+    background-color: crimson;
+    margin-right: 100;
+    float:left;
+}
+
+.create-btn {
+    background-color: rgb(64, 209, 64);
+    float:right;
+}
