--- a/src/components/sidebar/styles.css
+++ b/src/components/sidebar/styles.css
@@ -5,7 +5,7 @@
     z-index: 0;
     top: 0;
     left: 0;
-    background-color: #0095ff;;
+    background-color: #246fc5;;
     overflow-x: hidden;
     padding-top: 40px;
 }
