--- a/src/pages/LearnCard/styles.css
+++ b/src/pages/LearnCard/styles.css
@@ -41,12 +41,17 @@
 }
 
 .btns-ans span{
-    padding: 2px 30px;
+    padding: 2px 50px;
     display: inline-block;
     margin: 20px 5%;
     color: #fff;
     border-radius: 10px;
 }
+
+.btns-ans span:hover{
+    box-shadow: 5px 10px 18px #888888;
+}
+
 .nxt-review{
     font-size: 10pt;
 }
