--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -6,18 +6,45 @@
     height: 100%;
 }
 
-.loginForm{
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+.tab button {
+    background-color: inherit;
+    width: 50%;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+.tab button:hover {
+    background-color: #ddd;
+}
+
+.tab button.active {
+    background-color: #f00;
+}
+
+.centerForm{
     display: block;
     margin: auto;
     margin-top: 100px;
-    padding: 60px;
     background-color: rgba(255, 255, 255, 0.9);
-    width: 30%;
-    height: 50%;
+    width: 50%;
+    height: 70%;
     border-radius: 8px;
 }
 
-.loginForm input{
+form {
+    margin: 50px 60px 60px 60px;
+}
+
+form input{
     position: relative;
     display: block;
     width: 100%;
@@ -30,7 +57,7 @@
 }
 
 
-.loginForm button {
+form button {
     color: white;
     padding: 14px 20px;
     border: none;
