Logout button / Login error message

--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -77,4 +77,10 @@ form button {
     margin-top:20px;
     background-color: #022463;
 }
+
+.error-message{
+    color: #D8000C;
+    background-color: #FFD2D2;
+    padding: 1%;
+}
   
