--- a/src/components/sidebar/styles.css
+++ b/src/components/sidebar/styles.css
@@ -19,5 +19,15 @@
   }
   
 .sidebar a:hover {
-    color: #f1f1f1;
+    background-color: rgba(250, 250, 250, 0.2);
+}
+
+.logout {
+    position: absolute;
+    width: 100%;
+    bottom: 5%;
+}
+
+.menu-icon{
+    margin-right: 10%;
 }
