--- a/src/pages/LearnCard/styles.css
+++ b/src/pages/LearnCard/styles.css
@@ -1,7 +1,7 @@
 .LearnCard{
     display: block;
     margin: auto;
-    margin-top: 75px;
+    margin-top: 20px;
     text-align: center;
     padding: 5px 50px 10px 50px;
     height: 100%;
@@ -69,4 +69,9 @@
 
 .easy{
     background-color: chartreuse;
+}
+
+.cards-info{
+    text-align: left;
+    font-size: larger;
 }
