--- a/src/pages/MyDecks/styles.css
+++ b/src/pages/MyDecks/styles.css
@@ -59,7 +59,8 @@
   right: 200px;
   background-color: #4CAF50;
   color: white;
-  padding: 14px 20px;
+  padding: 10px 12px;
+  text-align: center;
   border: none;
   cursor: pointer;
   text-decoration: none;
